--- a/GuessingGame.Console/GuessingGame.ConsoleApplication.csproj
+++ b/GuessingGame.Console/GuessingGame.ConsoleApplication.csproj
@@ -6,7 +6,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Twilio" Version="5.13.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GuessingGame\GuessingGame.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
