added email messenger

--- a/GuessingGame.Console/GuessingGame.ConsoleApplication.csproj
+++ b/GuessingGame.Console/GuessingGame.ConsoleApplication.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="Twilio" Version="5.13.5" />
   </ItemGroup>
 
