--- a/GuessingGame.Shared/GuessingGame.Shared.csproj
+++ b/GuessingGame.Shared/GuessingGame.Shared.csproj
@@ -1,18 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Sendgrid" Version="9.9.0" />
-    <PackageReference Include="Twilio" Version="5.13.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GuessingGame\GuessingGame.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -24,7 +14,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
