--- a/GuessingGame.Tests/GuessingGame.BusinessRules.Tests.csproj
+++ b/GuessingGame.Tests/GuessingGame.BusinessRules.Tests.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GuessingGame\GuessingGame.csproj" />
+    <ProjectReference Include="..\GuessingGame.Shared\GuessingGame.Shared.csproj" />
+    <ProjectReference Include="..\GuessingGame\GuessingGame.BusinessRules.csproj" />
   </ItemGroup>
 
 </Project>
