--- a/GuessingGame/GuessingGame.BusinessRules.csproj
+++ b/GuessingGame/GuessingGame.BusinessRules.csproj
@@ -14,18 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <ProjectReference Include="..\GuessingGame.Shared\GuessingGame.Shared.csproj" />
   </ItemGroup>
 
 </Project>
