--- a/GuessingGame.Console/GuessingGame.Gui.ConsoleApplication.csproj
+++ b/GuessingGame.Console/GuessingGame.Gui.ConsoleApplication.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GuessingGame.Adapters\GuessingGame.Adapters.csproj" />
     <ProjectReference Include="..\GuessingGame\GuessingGame.BusinessRules.csproj" />
   </ItemGroup>
