--- a/GuessingGame.Adapters.WebApi/GuessingGame.Adapters.WebApi.csproj
+++ b/GuessingGame.Adapters.WebApi/GuessingGame.Adapters.WebApi.csproj
@@ -5,6 +5,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
