--- a/GuessingGame.Gui.Blazor.Client/GuessingGame.Gui.Blazor.Client.csproj
+++ b/GuessingGame.Gui.Blazor.Client/GuessingGame.Gui.Blazor.Client.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GuessingGame.Shared\GuessingGame.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
