--- a/GuessingGame.Gui.Blazor.Server/GuessingGame.Gui.Blazor.Server.csproj
+++ b/GuessingGame.Gui.Blazor.Server/GuessingGame.Gui.Blazor.Server.csproj
@@ -2,15 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GuessingGame.Adapters.WebApi\GuessingGame.Adapters.WebApi.csproj" />
     <ProjectReference Include="..\GuessingGame.Adapters\GuessingGame.Adapters.csproj" />
     <ProjectReference Include="..\GuessingGame.Gui.Blazor.Client\GuessingGame.Gui.Blazor.Client.csproj" />
     <ProjectReference Include="..\GuessingGame\GuessingGame.BusinessRules.csproj" />
