--- a/GuessingGame.Adapters/GuessingGame.Adapters.csproj
+++ b/GuessingGame.Adapters/GuessingGame.Adapters.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.9.1" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="Twilio" Version="5.13.6" />
   </ItemGroup>
