--- a/GuessingGame.Gui.Blazor.Client/GuessingGame.Gui.Blazor.Client.csproj
+++ b/GuessingGame.Gui.Blazor.Client/GuessingGame.Gui.Blazor.Client.csproj
@@ -6,6 +6,10 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
