--- a/GuessingGame.Gui.Blazor.Server/GuessingGame.Gui.Blazor.Server.csproj
+++ b/GuessingGame.Gui.Blazor.Server/GuessingGame.Gui.Blazor.Server.csproj
@@ -5,6 +5,10 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.4.0" />
